<resources>
	<string name="app_name">Wayezi Sample</string>
	<string name="hello_welcome_back">Hello, Welcome Back</string>
	<string name="sign_in_to_continue">Sign In to Continue</string>
	<string name="username_hint">username</string>
	<string name="password_hint">password</string>
	<string name="forgot_password">FORGOT PASSWORD?</string>
	<string name="log_in">SIGN IN</string>
	<string name="sign_up">SIGN UP</string>
	<string name="wayezi">Wayezi</string>
	<string name="create_account">Create Account</string>
	<string name="full_name">Full Name</string>
	<string name="first_name">First Name</string>
	<string name="last_name">Last Name</string>
	<string name="password">Password</string>
	<string name="phone_number">Phone Number</string>
	<string name="email">Email</string>
	<string name="next">Next</string>
	<string name="home_address">Home Address</string>
	<string name="school_address">School Address</string>
	<string name="school_name">School Name</string>
	<string name="don_t_have_an_account_sign_up">DON\'T HAVE AN ACCOUNT? SIGN UP</string>
	<string name="already_have_an_account_sign_in">already have an account? Sign in</string>
	<string name="choose_gender">Choose Gender</string>
	<string name="male">Male</string>
	<string name="female">Female</string>
	<string name="other">Other</string>
	<string name="select_a_school">Select a school</string>
	<string name="home">Home</string>
	<string name="profile">Profile</string>
	<string name="events">Events</string>
	<string name="cctv">CCTV</string>
	<string name="school_bus">School Bus</string>
	<string name="chats">Chats</string>
	<string name="sign_out">Sign Out</string>
	<string name="olumide_awodeji">Olumide Awodeji</string>
	<string name="open">Open</string>
	<string name="close">close</string>
	<string name="forgot_pass">Forgot Password?</string>
	<string name="recovery_txt">Enter the emil address associated\n with your account</string>
	<string name="reset_password">Reset Password</string>
	<string name="verify_your_email">Verify your email</string>
	<string name="recovery_email">Please enter the 4 digit code sent to
		cypher@gmail.com
	</string>
	<string name="confirm">Confirm</string>

	<string-array name="schools">
		<item>The Shri Ram</item>
		<item>The Sanskaar Valley</item>
		<item>Maharaja Sawai Bhawani Singh</item>
		<item>Little Angels High</item>
		<item>Hyderabad Public School</item>
		<item>GEAR Innovative</item>
		<item>Cygnus World</item>
		<item>Yadavindra Public School</item>
		<item>Rajkumar College</item>
		<item>The Future Foundation</item>
	</string-array>
</resources>
