<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
		xmlns:android="http://schemas.android.com/apk/res/android"
		xmlns:tools="http://schemas.android.com/tools"
		xmlns:app="http://schemas.android.com/apk/res-auto"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		tools:context=".Login"
		android:orientation="vertical"
		android:background="#fff"
		android:padding="20dp"
		android:layout_gravity="center">
	<LinearLayout
			android:id="@+id/layout_animation"
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:orientation="vertical">
		<ImageView
				android:id="@+id/logo"
				android:layout_width="150dp"
				android:layout_height="150dp"
				android:layout_gravity="start"
				android:src="@drawable/s_05_4x"/>

		<TextView
				android:id="@+id/welcome_msg"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:textSize="35sp"
				android:layout_marginBottom="5dp"
				android:text="@string/hello_welcome_back"/>

		<TextView
				android:id="@+id/sign_in_text"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:textSize="18sp"
				android:text="@string/sign_in_to_continue"/>

		<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginTop="20dp"
				android:layout_marginBottom="20dp"
				android:orientation="vertical">

			<com.google.android.material.textfield.TextInputLayout
					android:id="@+id/email"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
					android:hint="@string/email"
					android:layout_marginBottom="15dp">

				<com.google.android.material.textfield.TextInputEditText
						android:layout_width="match_parent"
						android:layout_height="wrap_content"/>
			</com.google.android.material.textfield.TextInputLayout>

			<com.google.android.material.textfield.TextInputLayout
					android:id="@+id/password"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
					android:hint="@string/password"
					app:passwordToggleEnabled="true"
					android:layout_marginBottom="15dp">

				<com.google.android.material.textfield.TextInputEditText
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:inputType="textPassword"/>
			</com.google.android.material.textfield.TextInputLayout>

			<TextView
					android:id="@+id/forgot_password"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:text="@string/forgot_password"
					android:textColor="#000"
					android:layout_gravity="end"
					android:layout_margin="10dp"
					android:textSize="15sp"/>

			<Button
					android:layout_width="250dp"
					android:layout_height="wrap_content"
					android:text="@string/log_in"
					android:id="@+id/signin_btn"
					android:background="@drawable/border_radius"
					android:textColor="#fff"
					android:layout_gravity="center"
					android:elevation="0dp"
					android:layout_marginTop="5dp"
					android:layout_marginBottom="5dp"/>

			<TextView
					android:id="@+id/loadSignUp"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:textColor="#000"
					android:text="@string/don_t_have_an_account_sign_up"
					android:textSize="14sp"
					android:layout_gravity="center"
					android:layout_marginTop="15dp"/>
		</LinearLayout>
	</LinearLayout>

</LinearLayout>