<?xml version="1.0" encoding="utf-8"?>
<ScrollView
		xmlns:android="http://schemas.android.com/apk/res/android"
		xmlns:tools="http://schemas.android.com/tools"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		tools:context=".SchoolForm"
		android:padding="30dp"
		android:scrollbars="none">

	<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="vertical">

		<ImageView
				android:id="@+id/backBtnPrevForm"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:padding="5dp"
				android:src="@drawable/ic_arrow_back_black_24dp"/>

		<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:orientation="vertical"
				android:layout_marginTop="10dp">

			<TextView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:text="Select Your Age"
					android:textColor="@color/black"
					android:textSize="18sp"/>

			<DatePicker
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:datePickerMode="spinner"
					android:calendarViewShown="false"
					android:spinnersShown="true"/>

			<TextView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:text="@string/choose_gender"
					android:textColor="@color/black"
					android:textSize="18sp"
					android:layout_marginBottom="5dp"/>

			<RadioGroup
					android:layout_width="match_parent"
					android:layout_height="match_parent"
					android:orientation="horizontal"
					android:layout_gravity="center"
					android:layout_marginBottom="10dp">
				<RadioButton
						android:text="@string/male"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:id="@+id/Male"/>
				<RadioButton
						android:text="@string/female"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:id="@+id/Female"/>
				<RadioButton
						android:text="@string/other"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:id="@+id/Other"/>
			</RadioGroup>

			<com.google.android.material.textfield.TextInputLayout
					android:id="@+id/homeAddress"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
					android:hint="@string/home_address"
					android:layout_marginBottom="15dp"
					android:textColorHint="@color/black">

				<com.google.android.material.textfield.TextInputEditText
						android:layout_width="match_parent"
						android:layout_height="wrap_content"/>
			</com.google.android.material.textfield.TextInputLayout>

			<!--			<com.google.android.material.textfield.TextInputLayout-->
			<!--					android:id="@+id/schoolName"-->
			<!--					android:layout_width="match_parent"-->
			<!--					android:layout_height="wrap_content"-->
			<!--					style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"-->
			<!--					android:hint="@string/school_name"-->
			<!--					android:layout_marginBottom="15dp"-->

			<!--					android:textColorHint="@color/black">-->

			<!--				<com.google.android.material.textfield.TextInputEditText-->
			<!--						android:layout_width="match_parent"-->
			<!--						android:layout_height="wrap_content"/>-->
			<!--			</com.google.android.material.textfield.TextInputLayout>-->

			<com.google.android.material.textfield.TextInputLayout

					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:hint="@string/school_name">

				<AutoCompleteTextView
						android:id="@+id/filled_exposed_dropdown"
						android:layout_width="match_parent"
						android:layout_height="wrap_content"/>

			</com.google.android.material.textfield.TextInputLayout>

			<com.google.android.material.textfield.TextInputLayout
					android:id="@+id/schAddress"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
					android:hint="@string/school_address"
					android:layout_marginBottom="15dp"
					android:textColorHint="@color/black">

				<com.google.android.material.textfield.TextInputEditText
						android:layout_width="match_parent"
						android:layout_height="wrap_content"/>
			</com.google.android.material.textfield.TextInputLayout>

			<Button
					android:layout_width="250dp"
					android:layout_height="wrap_content"
					android:text="@string/sign_up"
					android:background="@drawable/border_radius"
					android:textColor="#fff"
					android:layout_gravity="center"
					android:elevation="0dp"
					android:layout_marginTop="5dp"
					android:layout_marginBottom="5dp"/>

			<TextView
					android:id="@+id/backToLogin"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:textColor="#000"
					android:text="@string/already_have_an_account_sign_in"
					android:textSize="14sp"
					android:textAllCaps="true"
					android:layout_gravity="center"
					android:layout_marginTop="15dp"/>

		</LinearLayout>


	</LinearLayout>

</ScrollView>