<?xml version="1.0" encoding="utf-8"?>
<ScrollView
		xmlns:android="http://schemas.android.com/apk/res/android"
		xmlns:tools="http://schemas.android.com/tools"
		xmlns:app="http://schemas.android.com/apk/res-auto"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		tools:context=".Signup"
		android:padding="30dp"
		android:scrollbars="none">

	<LinearLayout
			android:id="@+id/signup_animation"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="vertical">

		<ImageView
				android:id="@+id/signup_back_btn"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:padding="5dp"
				android:src="@drawable/ic_arrow_back_black_24dp"/>

		<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/create_account"
				android:textColor="@color/black"
				android:textSize="35sp"
				android:textAllCaps="true"
				android:layout_marginTop="12dp"/>

		<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:orientation="vertical"
				android:layout_marginTop="20dp">

			<com.google.android.material.textfield.TextInputLayout
					android:id="@+id/firstname"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
					android:hint="@string/first_name"
					android:layout_marginBottom="15dp"
					android:textColorHint="@color/black">

				<com.google.android.material.textfield.TextInputEditText
						android:layout_width="match_parent"
						android:layout_height="wrap_content"/>
			</com.google.android.material.textfield.TextInputLayout>

			<com.google.android.material.textfield.TextInputLayout
					android:id="@+id/lastname"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
					android:hint="@string/last_name"
					android:layout_marginBottom="15dp"
					android:textColorHint="@color/black">

				<com.google.android.material.textfield.TextInputEditText
						android:layout_width="match_parent"
						android:layout_height="wrap_content"/>
			</com.google.android.material.textfield.TextInputLayout>

			<com.google.android.material.textfield.TextInputLayout
					android:id="@+id/password"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
					android:hint="@string/password"
					android:layout_marginBottom="15dp"

					android:textColorHint="@color/black">

				<com.google.android.material.textfield.TextInputEditText
						android:layout_width="match_parent"
						android:layout_height="wrap_content"/>
			</com.google.android.material.textfield.TextInputLayout>

			<com.hbb20.CountryCodePicker
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					app:ccp_autoDetectCountry="true"
					app:ccp_showFlag="true"
					app:ccp_showNameCode="true"
					app:ccp_showFullName="true"/>

			<com.google.android.material.textfield.TextInputLayout
					android:id="@+id/phonenum"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
					android:hint="@string/phone_number"
					android:layout_marginBottom="15dp"
					android:textColorHint="@color/black">

				<com.google.android.material.textfield.TextInputEditText
						android:layout_width="match_parent"
						android:layout_height="wrap_content"/>
			</com.google.android.material.textfield.TextInputLayout>

			<com.google.android.material.textfield.TextInputLayout
					android:id="@+id/email"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
					android:hint="@string/email"
					android:layout_marginBottom="15dp"
					android:textColorHint="@color/black">

				<com.google.android.material.textfield.TextInputEditText
						android:layout_width="match_parent"
						android:layout_height="wrap_content"/>
			</com.google.android.material.textfield.TextInputLayout>
			<!--			<TextView-->
			<!--					android:layout_width="wrap_content"-->
			<!--					android:layout_height="wrap_content"-->
			<!--					android:text="Select Your Age"-->
			<!--					android:textColor="@color/black"-->
			<!--					android:textSize="18sp"/>-->

			<!--			<DatePicker-->
			<!--					android:layout_width="match_parent"-->
			<!--					android:layout_height="wrap_content"-->
			<!--					android:datePickerMode="spinner"-->
			<!--					android:calendarViewShown="false"-->
			<!--					android:spinnersShown="true"/>-->

			<Button
					android:id="@+id/nextForm"
					android:layout_width="250dp"
					android:layout_height="wrap_content"
					android:text="@string/next"
					android:background="@drawable/border_radius"
					android:textColor="#fff"
					android:layout_gravity="center"
					android:elevation="0dp"
					android:layout_marginTop="5dp"
					android:layout_marginBottom="5dp"/>

		</LinearLayout>


	</LinearLayout>

</ScrollView>