<?xml version="1.0" encoding="utf-8"?>
<ScrollView
		xmlns:android="http://schemas.android.com/apk/res/android"
		xmlns:tools="http://schemas.android.com/tools"
		xmlns:app="http://schemas.android.com/apk/res-auto"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		tools:context=".ForgotPassword"
		android:padding="25dp"
		android:scrollbars="none"
		android:id="@+id/loadForgotPass">

	<androidx.constraintlayout.widget.ConstraintLayout
			android:layout_width="match_parent"
			android:layout_height="match_parent">

		<ImageView
				android:id="@+id/backBtnPrevForm"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:src="@drawable/ic_arrow_back_black_24dp" app:layout_constraintStart_toStartOf="parent"
				tools:layout_editor_absoluteY="25dp"/>

		<ImageView
				android:id="@+id/forgot_pass_pic"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:src="@drawable/forgot_passwordgif"
				app:layout_constraintTop_toTopOf="parent"
				android:layout_marginTop="20dp"
				app:layout_constraintEnd_toEndOf="parent"/>

		<TextView
				android:id="@+id/forgot_pass_txt"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:text="@string/forgot_pass"
				android:textSize="28sp"
				android:textStyle="bold"
				app:layout_constraintTop_toBottomOf="@id/forgot_pass_pic"
				android:textAlignment="center"
				android:layout_marginTop="20dp"
				app:layout_constraintStart_toEndOf="@id/forgot_pass_pic"
				android:textColor="@color/colorAccent"/>

		<TextView
				android:id="@+id/recovery_txt"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/recovery_txt"
				android:textSize="18sp"
				android:lineSpacingExtra="5dp"
				android:layout_marginTop="15dp"
				app:layout_constraintTop_toBottomOf="@id/forgot_pass_txt"
				app:layout_constraintStart_toEndOf="@id/forgot_pass_txt"
				android:textAlignment="center"
				app:layout_constraintEnd_toStartOf="@+id/forgot_pass_pic"/>

		<com.google.android.material.textfield.TextInputLayout
				android:id="@+id/email"
				app:layout_constraintTop_toBottomOf="@id/recovery_txt"
				android:layout_marginTop="25dp"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
				android:hint="@string/email"
				android:layout_marginBottom="15dp">

			<com.google.android.material.textfield.TextInputEditText
					android:layout_width="match_parent"
					android:layout_height="wrap_content"/>
		</com.google.android.material.textfield.TextInputLayout>

		<Button
				android:layout_width="250dp"
				android:layout_height="wrap_content"
				android:text="@string/reset_password"
				android:id="@+id/reset_pass"
				android:background="@drawable/border_radius"
				android:textColor="#fff"
				android:layout_gravity="center"
				android:elevation="0dp"
				android:layout_marginTop="30dp"
				android:layout_marginBottom="5dp"
				app:layout_constraintTop_toBottomOf="@id/email"
				app:layout_constraintStart_toEndOf="@id/email"
				android:textAlignment="center"
				app:layout_constraintEnd_toStartOf="@+id/email"/>
	</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
