<?xml version="1.0" encoding="utf-8"?>
<ScrollView
		xmlns:android="http://schemas.android.com/apk/res/android"
		xmlns:tools="http://schemas.android.com/tools"
		xmlns:app="http://schemas.android.com/apk/res-auto"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		tools:context=".ForgotPassword"
		android:padding="25dp"
		android:scrollbars="none"
		android:id="@+id/loadVerifyEmail">

	<androidx.constraintlayout.widget.ConstraintLayout
			android:layout_width="match_parent"
			android:layout_height="match_parent">

		<ImageView
				android:id="@+id/backBtnPrevForm"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:src="@drawable/ic_arrow_back_black_24dp"
				app:layout_constraintStart_toStartOf="parent"
				tools:layout_editor_absoluteY="25dp"/>

		<ImageView
				android:id="@+id/forgot_pass_pic"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:src="@drawable/mail_icongif"
				app:layout_constraintTop_toTopOf="parent"
				android:layout_marginTop="20dp"
				app:layout_constraintEnd_toEndOf="parent"/>

		<TextView
				android:id="@+id/forgot_pass_txt"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:text="@string/verify_your_email"
				android:textSize="28sp"
				android:textStyle="bold"
				app:layout_constraintTop_toBottomOf="@id/forgot_pass_pic"
				android:textAlignment="center"
				android:layout_marginTop="20dp"
				app:layout_constraintStart_toEndOf="@id/forgot_pass_pic"
				android:textColor="@color/colorAccent"/>

		<TextView
				android:id="@+id/recovery_txt"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/recovery_email"
				android:textSize="18sp"
				android:lineSpacingExtra="5dp"
				android:layout_marginTop="15dp"
				app:layout_constraintTop_toBottomOf="@id/forgot_pass_txt"
				app:layout_constraintStart_toEndOf="@id/forgot_pass_txt"
				android:textAlignment="center"
				app:layout_constraintEnd_toStartOf="@+id/forgot_pass_pic"/>

		<com.chaos.view.PinView
				android:id="@+id/pinview"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				style="@style/PinWidget.PinView"
				android:inputType="number"
				android:layout_marginStart="8dp"
				android:layout_marginEnd="8dp"
				android:layout_marginBottom="8dp"
				app:viewType="rectangle"
				app:itemCount="4"
				app:itemHeight="48dp"
				app:itemWidth="48dp"
				app:itemSpacing="2dp"
				app:itemRadius="10dp"
				app:lineColor="@color/colorAccent"
				android:layout_marginTop="30dp"
				app:layout_constraintTop_toBottomOf="@id/recovery_txt"
				app:layout_constraintStart_toEndOf="@id/recovery_txt"
				android:textAlignment="center"
				app:layout_constraintEnd_toStartOf="@+id/recovery_txt"/>

		<Button
				android:layout_width="250dp"
				android:layout_height="wrap_content"
				android:text="@string/confirm"
				android:id="@+id/signin_btn"
				android:background="@drawable/border_radius"
				android:textColor="#fff"
				android:layout_gravity="center"
				android:elevation="0dp"
				android:layout_marginTop="30dp"
				android:layout_marginBottom="5dp"
				app:layout_constraintTop_toBottomOf="@id/pinview"
				app:layout_constraintStart_toEndOf="@id/pinview"
				android:textAlignment="center"
				app:layout_constraintEnd_toStartOf="@+id/pinview"/>
	</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>